# Vivilux

./: .gitignore  CHL-MZI.py  CHL_MZI.py  Documentation.md  Mahmoud_Notes.md  README.md  __init__.py  activations.py  debug_nnx_state.py  grayscale_mzi_hardware_output.npz  metrics.py  optimum_4x4_params_theta.json  optimum_grayscale_4x4_params.npz  optimum_grayscale_params.npz  pyproject.toml  requirements.txt  tmp.ipynb
Examples/: Binary_MNIST_2x2.py  Binary_MNIST_2x2_efficient.py  MZI_MNIST_classification.py  cross_state_sweeps.py  heatmap.py  identity_matrix_calibration.py  identity_params.npz  magnitudeMonitoring.py  sfp_board_config_6x6.py  through_states.json
docs/: LAMM_Migration_Guide.md  LEAST_SQUARES_TECHNICAL_DETAILS.md
src/vivilux/: HP_Optimizer.py  __init__.py  activations.py  devices.py  hardware.py  helping.py  ising.py  lamm.py  layers.py  learningRules.py  logger.py  materials.py  meshes.py  metrics.py  monitors.py  nets.py  neurons.py  optimizers.py  parameters.py  paths.py  photonics.py  processes.py  quantization.py  signals.py  synapses.py  visualize.py
tests/: 4x4_bar_state_solving.py  4x4_bar_state_voltages.json  4x4_final_params.json  5x5_bar_state_voltages.json  6x6_board_config.py  AbsMesh.py  ErrorDriven.py  ErrorDriven_dummy.py  ErrorDriven_ideal.py  ErrorDriven_meshes.py  OversizedMZI_periodicity.py  adam.py  agilent_laser_normalization.py  agilent_laser_sweep.py  applyDeltaMZI.py  applyDeltaMZI_bitPrecision.py  applyDeltaMZI_convergence.py  applyDeltaOversizedMZI.py  applyDeltaOversizedMZI_sparseConvergence.py  applyDeltaSVDMZI.py  applyDeltaSVDMZI_convergence.py  applyDeltaSVDMZI_sparseConvergence.py  apply_crirel_params.py  board_config_10x10.py  board_config_6x6.py  board_config_6x6_v2.py  compare_least_squares.py  crirel_calibration_sfp.py  crirel_params.json  crossbar.py  debug_mesh_updates.py  debug_training.py  diabetes.py  diabetes_photonic.py  directionalDerivativeError.py  errorDriven_impossible_pats.csv  errorDriven_leabraNet_serial.json  errorDriven_leabraNet_serial_main.json  fffb.py  fffb_search.py  (+80 more)
tests/Equivalence/: ErrorDriven.py  XX1.py  initial_xor_params.json  neuron.csv  neuron.py  ra25.py  ra25_StepTrial.py  ra25_activityLog.csv  ra25_cosDiffLog.csv  ra25_input_permutation.csv  ra25_patterns.csv  ra25_profile.pstats  ra25_profile.txt  ra25_weights.json  trained_xor_weights.csv  xx1.csv
tests/agilent_lasers/: board_config_6x6_v2.py  crirel_calibration.py  hold_voltages.py  periodicity_hardware_test.py
tests/benchmarks/: ra25_test.py
tests/dac_lasers/: hardware_concavity_testing.py  laser_array_4.py
tests/sfp_lasers/: adam_central_difference_descent.py  adam_central_difference_descent_parameters.json  (+19 more)
(+56 files in other folders)
