[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vivilux"
version = "0.8.0"
authors = [
  { name="Luis El Srouji", email="lzelsrouji@ucdavis.edu" },
]
description = "A package for simulating meshes of photonic elements with neuromorphic learning rules"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NeuroSumbaD/CHL-MZI"