[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vivilux"
version = "0.8.0"
authors = [
  { name="Luis El Srouji", email="lzelsrouji@ucdavis.edu" },
]
description = "A package for simulating meshes of photonic elements with neuromorphic learning rules"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "imageio>=2.37.3",
    "jax>=0.9.2",
    "matplotlib>=3.10.8",
    "mcculw>=1.0.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pydaq",
    "pyserial>=3.5",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "pyvisa>=1.16.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[project.urls]
"Homepage" = "https://github.com/NeuroSumbaD/CHL-MZI"

[tool.uv.sources]
pydaq = { path = "../pydaq", editable = true }
